generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ==========================================
// CREDIT CARD MODEL
// ==========================================
model CreditCard {
  id                    String   @id @default(uuid())
  name                  String   // "Chase Sapphire Preferred"
  issuer                String   // "Chase", "Amex", "Capital One"
  imageUrl              String?  // Card image for UI
  applyUrl              String?  // Affiliate/application link
  
  // Financial Details
  annualFee             Decimal  @db.Decimal(10, 2) // 95.00
  aprMin                Decimal  @db.Decimal(5, 2)  // 18.99
  aprMax                Decimal  @db.Decimal(5, 2)  // 25.99
  foreignTransactionFee Decimal  @db.Decimal(5, 2) @default(0) // 3.00%
  creditScoreMin        Int      // 670
  incomeRequirement     Decimal? @db.Decimal(12, 2) // 30000.00 (optional)
  
  // Rewards
  signupBonus           Int      // 60000 (points)
  signupSpendReq        Decimal  @db.Decimal(10, 2) // 4000.00 (spend $4k in 3 months)
  
  // Card Category
  category              CardCategory
  targetAudience        Audience[]
  
  // Relationships
  rewardRates           RewardRate[]
  benefits              Benefit[]
  userComparisons       UserCardComparison[]
  
  createdAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt
  
  @@index([issuer])
  @@index([category])
  @@index([creditScoreMin])
}

// ==========================================
// REWARD RATES (e.g., 3x on dining)
// ==========================================
model RewardRate {
  id                    String   @id @default(uuid())
  creditCardId          String
  creditCard            CreditCard @relation(fields: [creditCardId], references: [id], onDelete: Cascade)
  
  category              SpendingCategory // DINING, TRAVEL, GROCERIES
  rate                  Decimal  @db.Decimal(5, 2) // 3.0 (3x points)
  pointValue            Decimal  @db.Decimal(8, 6) // 0.012500 (1 point = $0.0125)
  
  createdAt             DateTime @default(now())
  
  @@unique([creditCardId, category]) // Prevent duplicate categories per card
  @@index([creditCardId])
  @@index([category])
}

// ==========================================
// BENEFITS (Insurance, Protections, etc.)
// ==========================================
model Benefit {
  id                    String   @id @default(uuid())
  creditCardId          String
  creditCard            CreditCard @relation(fields: [creditCardId], references: [id], onDelete: Cascade)
  
  title                 String   // "Trip Cancellation Insurance"
  description           String   @db.Text
  aiSummary             String?  @db.Text // AI-generated "what this means for you"
  
  type                  BenefitType
  
  createdAt             DateTime @default(now())
  
  @@index([creditCardId])
  @@index([type])
}

// ==========================================
// USER MODEL
// ==========================================
model User {
  id                    String   @id @default(uuid())
  email                 String   @unique
  passwordHash          String?  // Optional for OAuth users
  name                  String?
  
  // User Profile Data
  creditScore           Int?
  annualIncome          Decimal? @db.Decimal(12, 2)
  audience              Audience? // STUDENT, PROFESSIONAL, ELDERLY
  
  // User Spending Habits (for NAV calculation)
  spendingProfile       SpendingProfile?
  savedCards            UserCardComparison[]
  
  createdAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt
}

// ==========================================
// USER SPENDING PROFILE
// ==========================================
model SpendingProfile {
  id                    String   @id @default(uuid())
  userId                String   @unique
  user                  User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  diningSpend           Decimal  @db.Decimal(10, 2) @default(0) // Monthly spending
  travelSpend           Decimal  @db.Decimal(10, 2) @default(0)
  groceriesSpend        Decimal  @db.Decimal(10, 2) @default(0)
  gasSpend              Decimal  @db.Decimal(10, 2) @default(0)
  generalSpend          Decimal  @db.Decimal(10, 2) @default(0)
  
  createdAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt
}

// ==========================================
// USER CARD COMPARISONS (Saved for Later)
// ==========================================
model UserCardComparison {
  id                    String   @id @default(uuid())
  userId                String
  user                  User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  creditCardId          String
  creditCard            CreditCard @relation(fields: [creditCardId], references: [id], onDelete: Cascade)
  
  calculatedNAV         Decimal? @db.Decimal(12, 2) // Net Annual Value calculated by FastAPI
  notes                 String?  @db.Text
  
  createdAt             DateTime @default(now())
  
  @@unique([userId, creditCardId])
  @@index([userId])
}

// ==========================================
// ENUMS
// ==========================================
enum CardCategory {
  TRAVEL
  CASHBACK
  BUSINESS
  STUDENT
  SECURED
  PREMIUM
}

enum Audience {
  REGULAR
  STUDENT
  PROFESSIONAL
  ELDERLY
}

enum SpendingCategory {
  DINING
  TRAVEL
  GROCERIES
  GAS
  GENERAL
  STREAMING
  ONLINE_SHOPPING
}

enum BenefitType {
  INSURANCE
  PURCHASE_PROTECTION
  LOUNGE_ACCESS
  CONCIERGE
  EXTENDED_WARRANTY
  FRAUD_PROTECTION
}